[gd_scene load_steps=12 format=3 uid="uid://d3jvt5762ptcg"]

[ext_resource type="Texture2D" uid="uid://dpdy3b3drnybd" path="res://Assets/Jumper.png" id="1_asdd8"]
[ext_resource type="Script" path="res://Entities/jumper.gd" id="1_jaabh"]
[ext_resource type="Texture2D" uid="uid://b6ewoethwv5yf" path="res://Assets/Double Slash.png" id="2_5h41m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2oif2"]
radius = 4.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1co5"]
size = Vector2(12, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xm36t"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swq4u"]
size = Vector2(12, 20)

[sub_resource type="Animation" id="Animation_qayv1"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageArea/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"deal_damage"
}, {
"args": [],
"method": &"start_attack_cooldown"
}]
}

[sub_resource type="Animation" id="Animation_6rnun"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageArea/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3ftl"]
_data = {
"Attack": SubResource("Animation_qayv1"),
"RESET": SubResource("Animation_6rnun")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_46bvk"]
radius = 2.23607

[node name="Jumper" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_jaabh")
jump_speed = 150.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("1_asdd8")
offset = Vector2(0, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_2oif2")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-5, -7)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_x1co5")

[node name="JumpArea" type="Area2D" parent="."]
position = Vector2(-14, -7)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
shape = SubResource("RectangleShape2D_xm36t")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(-11, -7)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_swq4u")

[node name="Sprite2D" type="Sprite2D" parent="DamageArea"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_5h41m")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m3ftl")
}

[node name="FloorDetectionArea" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetectionArea"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_46bvk")

[node name="FloorDetectionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="FloorDetectionArea" to="." method="_on_floor_detection_area_body_entered"]
[connection signal="timeout" from="FloorDetectionTimer" to="." method="_on_floor_detection_timer_timeout"]
